force-app/main/default/objects/SObjectAutomationHandler__mdt/SObjectAutomationHandler__mdt.object-meta.xml
<CustomObject>
    <description
  >Individual handler for execution automation on SObjects.</description>
    <label>SObject Automation Handler</label>
    <pluralLabel>SObject Automation Handlers</pluralLabel>
</CustomObject>