force-app/main/default/objects/SObjectAutomationHandler__mdt/fields/AfterDelete__c.field-meta.xml
<CustomField>
    <fullName>AfterDelete__c</fullName>
    <description
  >The SObject subscriber to register this handler with for after delete contexts.</description>
    <inlineHelpText
  >The SObject subscriber to register this handler with for after delete contexts.</inlineHelpText>
    <label>After Delete</label>
    <referenceTo>SObjectAutomationSubscriber__mdt</referenceTo>
    <relationshipLabel>After Delete Handlers</relationshipLabel>
    <relationshipName>AfterDeleteHandlers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>