force-app/main/default/objects/SObjectAutomationHandler__mdt/fields/AfterInsert__c.field-meta.xml
<CustomField>
    <fullName>AfterInsert__c</fullName>
    <description
  >The SObject subscriber to register this handler with for after insert contexts.</description>
    <inlineHelpText
  >The SObject subscriber to register this handler with for after insert contexts.</inlineHelpText>
    <label>After Insert</label>
    <referenceTo>SObjectAutomationSubscriber__mdt</referenceTo>
    <relationshipLabel>After Insert Handlers</relationshipLabel>
    <relationshipName>AfterInsertHandlers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>