force-app/main/default/objects/SObjectAutomationHandler__mdt/fields/AfterUndelete__c.field-meta.xml
<CustomField>
    <fullName>AfterUndelete__c</fullName>
    <description
  >The SObject subscriber to register this handler with for after undelete contexts.</description>
    <inlineHelpText
  >The SObject subscriber to register this handler with for after undelete contexts.</inlineHelpText>
    <label>After Undelete</label>
    <referenceTo>SObjectAutomationSubscriber__mdt</referenceTo>
    <relationshipLabel>After Undelete handlers</relationshipLabel>
    <relationshipName>AfterUndeleteHandlers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>