force-app/main/default/objects/SObjectAutomationHandler__mdt/fields/AfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>AfterUpdate__c</fullName>
    <description
  >The SObject subscriber to register this handler with for after update contexts.</description>
    <inlineHelpText
  >The SObject subscriber to register this handler with for after update contexts.</inlineHelpText>
    <label>After Update</label>
    <referenceTo>SObjectAutomationSubscriber__mdt</referenceTo>
    <relationshipLabel>After Update handlers</relationshipLabel>
    <relationshipName>AfterUpdateHandlers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>