force-app/main/default/objects/SObjectAutomationHandler__mdt/fields/ApiName__c.field-meta.xml
<CustomField>
    <fullName>ApiName__c</fullName>
    <description
  >The class name (Apex) for API name (flow) for the automation to run.</description>
    <inlineHelpText
  >The class name (Apex) for API name (flow) for the automation to run.</inlineHelpText>
    <label>Api Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>