force-app/main/default/objects/SObjectAutomationHandler__mdt/fields/AutomationType__c.field-meta.xml
<CustomField>
    <fullName>AutomationType__c</fullName>
    <description>The type of automation to run this handler as.</description>
    <inlineHelpText
  >The type of automation to run this handler as.</inlineHelpText>
    <label>Automation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
                <default>true</default>
                <label>Apex</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>