force-app/main/default/objects/SObjectAutomationHandler__mdt/fields/BeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>BeforeDelete__c</fullName>
    <description
  >The SObject subscriber to register this handler with for before delete contexts.</description>
    <inlineHelpText
  >The SObject subscriber to register this handler with for before delete contexts.</inlineHelpText>
    <label>Before Delete</label>
    <referenceTo>SObjectAutomationSubscriber__mdt</referenceTo>
    <relationshipLabel>Before Delete Handlers</relationshipLabel>
    <relationshipName>BeforeDeleteHandlers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>