force-app/main/default/objects/SObjectAutomationHandler__mdt/fields/BeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>BeforeInsert__c</fullName>
    <description
  >The SObject subscriber to register this handler with for before insert contexts.</description>
    <inlineHelpText
  >The SObject subscriber to register this handler with for before insert contexts.</inlineHelpText>
    <label>Before Insert</label>
    <referenceTo>SObjectAutomationSubscriber__mdt</referenceTo>
    <relationshipLabel>Before Insert Handlers</relationshipLabel>
    <relationshipName>BeforeInsertHandlers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>