force-app/main/default/objects/SObjectAutomationHandler__mdt/fields/BeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>BeforeUpdate__c</fullName>
    <description
  >The SObject subscriber to register this handler with for before update contexts.</description>
    <inlineHelpText
  >The SObject subscriber to register this handler with for before update contexts.</inlineHelpText>
    <label>Before Update</label>
    <referenceTo>SObjectAutomationSubscriber__mdt</referenceTo>
    <relationshipLabel>Before Update Handlers</relationshipLabel>
    <relationshipName>BeforeUpdateHandlers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>