force-app/main/default/objects/SObjectAutomationHandler__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not the handler is active.</description>
    <inlineHelpText>Whether or not the handler is active.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>