force-app/main/default/objects/SObjectAutomationHandler__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description
  >The priority to execute handlers with. Lower numbers will be executed first and null values will be executed last.</description>
    <inlineHelpText
  >The priority to execute handlers with. Lower numbers will be executed first and null values will be executed last.</inlineHelpText>
    <label>Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>